--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ click==8.1.7
 colorama==0.4.6
 config==0.5.1
 decouple==0.0.7
-dnspython==2.4.2
+dnspython
 fastapi==0.103.1
 frozenlist==1.4.0
 h11==0.14.0
