--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-fastapi[all]
 aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.5.0
@@ -11,15 +10,24 @@ click==8.1.7
 colorama==0.4.6
 config==0.5.1
 decouple==0.0.7
-dnspython
+dnspython==2.4.2
+email-validator==2.0.0.post2
 fastapi==0.103.1
 frozenlist==1.4.0
 h11==0.14.0
+httpcore==0.18.0
 httptools==0.6.0
+httpx==0.25.0
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 multidict==6.0.4
 openai==0.28.0
+orjson==3.9.7
 pydantic==2.3.0
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
 pydantic_core==2.6.3
 pymongo==4.5.0
 python-dotenv==1.0.0
@@ -30,6 +38,7 @@ sniffio==1.3.0
 starlette==0.27.0
 tqdm==4.66.1
 typing_extensions==4.7.1
+ujson==5.8.0
 urllib3==2.0.4
 uvicorn==0.23.2
 watchfiles==0.20.0
