--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ config==0.5.1
 decouple==0.0.7
 email-validator==2.0.0.post2
 fastapi==0.103.1
-frozenlist==1.4.0
+frozenlist==1.3.0
+dnspython==2.3.0
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.0
