--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,16 @@
+previewsEnabled: true
 services:
-  # A Docker web service
-  - type: web
-    name: thespian-backend
-    runtime: python
     plan: free
+  - type: web
+    name: thespain
+    runtime: python
+    env: python
     autoDeploy: false
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.5
 
 databases:
   - name: dpg-ck9c6uf0vg2c73a3s2rg-a
